(library
 (name chan)
 (modules Chan)
 (libraries fiber)
 (wrapped false))

(executable
 (name wc_fib)
 (modules Wc_fib)
 (libraries fiber chan)
 (modes native))

(executable
 (name echo_server_lwt)
 (modules Echo_server_lwt)
 (preprocess (pps lwt_ppx))
 (libraries lwt.unix)
 (modes native))

(executable
 (name echo_server)
 (modules Echo_server)
 (libraries fiber chan)
 (modes native))

(executable
 (name echo_client)
 (modules Echo_client)
 (libraries fiber)
 (modes native))


(alias
 (name example)
 (deps wc_fib.exe
       echo_server_lwt.exe
       echo_server.exe
       echo_client.exe)
 (action (bash "for bin in %{deps}; do ln -f $bin ../../../example/${bin%.exe}; done")))

(alias
 (name default)
 (deps (alias example)))
